// Copyright 2014 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package leveldb_proto;

// A proto to test leveldb_proto::ProtoDatabase implementations.
//
// Next tag: 3
message TestProto {
  // Arbitary id.
  optional string id = 1;

  // Arbitrary data.
  optional string data = 2;
}
